Enable default peon task GC log and add s3 push task GC log implementation